Landing page markup done

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -31,12 +31,12 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Sublimación camisas</h1>
+      <h1 class="header center third-text-color">Sublimación camisas</h1>
       <div class="row center">
         <h5 class="header col s12 light">Una empresa adaptada a ti</h5>
       </div>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Ver promociones</a>
+        <button class="btn btn-large waves-effect yellow darken-3">Ver promociones</button>
       </div>
       <br><br>
 
@@ -46,12 +46,26 @@
 
   <div class="container">
     <div class="section">
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4 center">
+          <img src="img/blackShirt.jpg">
+        </div>
+
+        <div class="col s12 m4 center">
+          <img src="img/whiteShirt.jpg">
+        </div>
+
+        <div class="col s12 m4 center">
+          <img src="img/blackShirt.jpg">
+        </div>
+      </div>
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center third-text-color"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Speeds up development</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
@@ -76,9 +90,35 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12 m6 center">
+          <img src="img/redCap.jpg">
+        </div>
 
-    </div>
-    <br><br>
+        <div class="col s12 m6 center">
+          <img src="img/blackCap.jpg">
+        </div>
+
+
+        <div class="col s12 m6">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">User Experience Focused</h5>
+
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m6">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
+      </div>
+ </div>
   </div>
 
   <footer class="page-footer default-primary-color">
@@ -112,7 +152,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Haniel</a>
       </div>
     </div>
   </footer>
