--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Sublimacion</title>
+  <title>Sublimación</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,19 +13,29 @@
   <link rel="stylesheet" href="css/palette.css">
 </head>
 <body>
+  <ul id="dropdown1" class="dropdown-content">
+  <li><a href="detalle.html">Detalles</a></li>
+    <li class="divider"></li>
+  <li><a href="#!">Acerca de</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">Galería</a></li>
+</ul>
   <nav class="default-primary-color" role="navigation">
     <div class="nav-wrapper container">
 
-      <a id="" href="#" class="brand-logo"><i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>Empresa</a>
+      <a id="" href="index.html" class="brand-logo"><i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>Serigrafía</a>
 
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Promociones</a></li>
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Enlaces<i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Promociones</a></li>
+
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
