Detalle producto y acerca de

--- a/starter-template/acerca.html
+++ b/starter-template/acerca.html
@@ -39,37 +39,31 @@
     </div>
   </nav>
 
-  <div class="row  light-blue darken-2 shadow-box">
+  <div class="row shadow-box">
     <div class="col s12 m12 container">
       <div class="container">
-        <h2 class="header left text-primary-color text-shadow">Sublimación camisas</h2>                
+        <h2 class="header left third-text-color text-shadow">¿Quienes somos?</h2>                
       </div>
     </div>
   </div>
 
   <div class="container">
+  	<p class="flow-text justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan massa vitae ante faucibus scelerisque. Nam eget cursus nibh. Vivamus iaculis fermentum ipsum ut fermentum. Phasellus interdum sollicitudin condimentum. Praesent pulvinar dolor ut enim efficitur, non rutrum tortor hendrerit. Mauris ac ex tortor. Donec sit amet laoreet arcu. Nullam fringilla fermentum luctus. Nunc nec libero lacus. Donec ultricies et est sed laoreet. Ut ipsum odio, interdum at semper sed, iaculis ut massa. Nulla eu condimentum massa. Nulla maximus, mi suscipit euismod porttitor, orci eros auctor est, eu facilisis urna libero id nisi. Sed eleifend eros sit amet vehicula bibendum.
 
-    <div class="row">
-      <div class="col s12 m12" ><h4 class="secondary-text-color">Detalle producto</h4></div>
-      <div class="col s12 m4 l6">
-        <img src="img/bitBlack.jpg" class="detail-image">
-      </div>		
-      <div class="col s12 m6 l6">
-        <p class="flow-text justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-        It has survived not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. </p>
-      </div>	
-    </div>
-<!--     <div class="row">
-      <div class="col s12 m6 center">
-        <button class="btn btn-large waves-effect waves-light">
-          Ordenar
-        </button>
+	Duis hendrerit vestibulum faucibus. Praesent accumsan ac quam eu auctor. Vestibulum mollis erat in tempus venenatis. Aenean viverra velit sit amet tempor pellentesque. Etiam quis lacus scelerisque, laoreet tellus ut, ullamcorper dolor. Nulla ornare ac mi auctor venenatis. Donec augue sem, placerat nec ligula non, fermentum ultricies turpis. Cras gravida, ligula in vulputate interdum, neque nulla mattis sapien, consectetur sollicitudin arcu leo in tellus. Nullam urna turpis, varius id ex a, dapibus viverra ex.
+	</p>
+  </div>
+    <div class="row shadow-box-bottom">
+    <div class="col s12 m12 container">
+      <div class="container">
+        <h2 class="header left third-text-color text-shadow">Horarios atención</h2>                
       </div>
-    </div> -->
+    </div>
+  </div>
 
+  <div class="container">
+  	<p class="flow-text justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan massa vitae ante faucibus scelerisque. Nam eget cursus nibh. Vivamus iaculis fermentum ipsum ut fermentum. Phasellus interdum sollicitudin condimentum. Praesent pulvinar dolor ut enim efficitur, non rutrum tortor hendrerit. Mauris ac ex tortor. Donec sit amet laoreet arcu.
+	</p>
   </div>
 
   <footer class="page-footer default-primary-color">
@@ -77,7 +71,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p class="grey-text text-lighten-4 justify">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
 
         </div>
