--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -16,7 +16,7 @@
   <ul id="dropdown1" class="dropdown-content">
   <li><a href="detalle.html">Detalles</a></li>
     <li class="divider"></li>
-  <li><a href="#!">Acerca de</a></li>
+  <li><a href="acerca.html">Acerca de</a></li>
   <li class="divider"></li>
   <li><a href="#!">Galería</a></li>
 </ul>
