--- a/starter-template/contacto.html
+++ b/starter-template/contacto.html
@@ -40,31 +40,45 @@
   </nav>
 
   <div class="row shadow-box">
-    <div class="col s12 m12 container">
+    <div class="col s12 m12">
       <div class="container">
-        <h2 class="header left third-text-color text-shadow">¿Quienes somos?</h2>                
+        <h2 class="header left third-text-color text-shadow">Contactanos</h2>                
       </div>
     </div>
   </div>
+    <div class="container contact-square hoverable teal lighten-5">
+      <div class="col s12">
+         <h4><i class="fa fa-user-circle-o" aria-hidden="true"></i> Isaias Isaias Isaias</h4>
+      </div>
+      <hr>
+      <div class="col s12">
+         <h4><i class="fa fa-phone-square" aria-hidden="true"></i> +505 8888-8888</h4>
+      </div>
+      <hr>
+      <div class="col s12">
+         <h4><i class="fa fa-envelope" aria-hidden="true"></i> <a href="#" class="primary-text-color ">Isaias@isaias.com</a></h4>
+      </div>
+      <hr>
+      <div class="col s12">
+         <h4><i class="fa fa-location-arrow" aria-hidden="true"></i> Direccion de aqui para allá</h4>
+      </div>
+      <br>
+              <div id="googleMap" style="width:100%;height:400px;border-radius: 8px;"></div>
 
-  <div class="container">
-  	<p class="flow-text justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan massa vitae ante faucibus scelerisque. Nam eget cursus nibh. Vivamus iaculis fermentum ipsum ut fermentum. Phasellus interdum sollicitudin condimentum. Praesent pulvinar dolor ut enim efficitur, non rutrum tortor hendrerit. Mauris ac ex tortor. Donec sit amet laoreet arcu. Nullam fringilla fermentum luctus. Nunc nec libero lacus. Donec ultricies et est sed laoreet. Ut ipsum odio, interdum at semper sed, iaculis ut massa. Nulla eu condimentum massa. Nulla maximus, mi suscipit euismod porttitor, orci eros auctor est, eu facilisis urna libero id nisi. Sed eleifend eros sit amet vehicula bibendum.
+<script>
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
 
-	Duis hendrerit vestibulum faucibus. Praesent accumsan ac quam eu auctor. Vestibulum mollis erat in tempus venenatis. Aenean viverra velit sit amet tempor pellentesque. Etiam quis lacus scelerisque, laoreet tellus ut, ullamcorper dolor. Nulla ornare ac mi auctor venenatis. Donec augue sem, placerat nec ligula non, fermentum ultricies turpis. Cras gravida, ligula in vulputate interdum, neque nulla mattis sapien, consectetur sollicitudin arcu leo in tellus. Nullam urna turpis, varius id ex a, dapibus viverra ex.
-	</p>
-  </div>
-    <div class="row shadow-box-bottom">
-    <div class="col s12 m12 container">
-      <div class="container">
-        <h2 class="header left third-text-color text-shadow">Horarios atención</h2>                
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD56VX81XPbH2f2BoBpwMvn3r-h3i6zAQQ&callback=myMap"></script>
+
       </div>
     </div>
-  </div>
-
-  <div class="container">
-  	<p class="flow-text justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan massa vitae ante faucibus scelerisque. Nam eget cursus nibh. Vivamus iaculis fermentum ipsum ut fermentum. Phasellus interdum sollicitudin condimentum. Praesent pulvinar dolor ut enim efficitur, non rutrum tortor hendrerit. Mauris ac ex tortor. Donec sit amet laoreet arcu.
-	</p>
-  </div>
 
   <footer class="page-footer default-primary-color">
     <div class="container">
