--- a/starter-template/galeria.html
+++ b/starter-template/galeria.html
@@ -42,28 +42,36 @@
   <div class="row shadow-box">
     <div class="col s12 m12 container">
       <div class="container">
-        <h2 class="header left third-text-color text-shadow">¿Quienes somos?</h2>                
+        <h2 class="header left third-text-color text-shadow">Galería</h2>                
       </div>
     </div>
   </div>
-
-  <div class="container">
-  	<p class="flow-text justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan massa vitae ante faucibus scelerisque. Nam eget cursus nibh. Vivamus iaculis fermentum ipsum ut fermentum. Phasellus interdum sollicitudin condimentum. Praesent pulvinar dolor ut enim efficitur, non rutrum tortor hendrerit. Mauris ac ex tortor. Donec sit amet laoreet arcu. Nullam fringilla fermentum luctus. Nunc nec libero lacus. Donec ultricies et est sed laoreet. Ut ipsum odio, interdum at semper sed, iaculis ut massa. Nulla eu condimentum massa. Nulla maximus, mi suscipit euismod porttitor, orci eros auctor est, eu facilisis urna libero id nisi. Sed eleifend eros sit amet vehicula bibendum.
-
-	Duis hendrerit vestibulum faucibus. Praesent accumsan ac quam eu auctor. Vestibulum mollis erat in tempus venenatis. Aenean viverra velit sit amet tempor pellentesque. Etiam quis lacus scelerisque, laoreet tellus ut, ullamcorper dolor. Nulla ornare ac mi auctor venenatis. Donec augue sem, placerat nec ligula non, fermentum ultricies turpis. Cras gravida, ligula in vulputate interdum, neque nulla mattis sapien, consectetur sollicitudin arcu leo in tellus. Nullam urna turpis, varius id ex a, dapibus viverra ex.
-	</p>
-  </div>
-    <div class="row shadow-box-bottom">
-    <div class="col s12 m12 container">
-      <div class="container">
-        <h2 class="header left third-text-color text-shadow">Horarios atención</h2>                
-      </div>
+  <div class="row">
+    <div class="col s12 m12">
+       <div class="carousel">
+          <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/400/400/nature/1"></a>
+          <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/400/400/nature/2"></a>
+          <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/400/400/nature/3"></a>
+          <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/400/400/nature/4"></a>
+          <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/400/400/nature/5"></a>
+        </div>        
     </div>
-  </div>
-
-  <div class="container">
-  	<p class="flow-text justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan massa vitae ante faucibus scelerisque. Nam eget cursus nibh. Vivamus iaculis fermentum ipsum ut fermentum. Phasellus interdum sollicitudin condimentum. Praesent pulvinar dolor ut enim efficitur, non rutrum tortor hendrerit. Mauris ac ex tortor. Donec sit amet laoreet arcu.
-	</p>
+    <div class="col s8 offset-s2">
+        <div class="carousel carousel-slider" data-indicators="true">
+          <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/800/400/food/1"></a>
+          <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/2"></a>
+          <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
+          <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
+        </div>
+    </div>
+    <div class="col s6 offset-s3">
+      <p class="flow-text justify">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tristique mauris ut est imperdiet molestie. Sed faucibus mattis lorem, ut auctor sapien mattis in. Pellentesque cursus risus sed velit mollis, volutpat bibendum dolor molestie. In hac habitasse platea dictumst. Sed varius arcu felis, non congue tellus efficitur porttitor
+      </p>
+    </div>
+    <div class="col s12 center">
+      <a href="contacto.html" class="btn-large waves-effect waves-light">Contactenos</a>
+    </div>
   </div>
 
   <footer class="page-footer default-primary-color">
