--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -18,7 +18,7 @@
     <li class="divider"></li>
   <li><a href="acerca.html">Acerca de</a></li>
   <li class="divider"></li>
-  <li><a href="#!">Galería</a></li>
+  <li><a href="galeria.html">Galería</a></li>
 </ul>
   <nav class="default-primary-color" role="navigation">
     <div class="nav-wrapper container">
