--- a/starter-template/promociones.html
+++ b/starter-template/promociones.html
@@ -42,43 +42,96 @@
   <div class="row shadow-box">
     <div class="col s12 m12">
       <div class="container">
-        <h2 class="header left third-text-color text-shadow">Contáctanos</h2>                
+        <h2 class="header left third-text-color text-shadow">Promociones</h2>                
       </div>
     </div>
   </div>
-    <div class="container contact-square hoverable">
-      <div class="col s12">
-         <h4><i class="fa fa-user-circle-o" aria-hidden="true"></i> Isaias Isaias Isaias</h4>
-      </div>
-      <div class="divider"></div>
-      <div class="col s12">
-         <h4><i class="fa fa-phone-square" aria-hidden="true"></i> +505 8888-8888</h4>
-      </div>
-      <div class="divider"></div>
-      <div class="col s12">
-         <h4><i class="fa fa-envelope" aria-hidden="true"></i> <a href="#" class="primary-text-color ">Isaias@isaias.com</a></h4>
-      </div>
-      <div class="divider"></div>
-      <div class="col s12">
-         <h4><i class="fa fa-location-arrow" aria-hidden="true"></i> Direccion de aqui para allá</h4>
-      </div>
-      <br>
-              <div id="googleMap" style="width:100%;height:400px;border-radius: 8px;"></div>
 
-<script>
-function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(51.508742,-0.120850),
-    zoom:5,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD56VX81XPbH2f2BoBpwMvn3r-h3i6zAQQ&callback=myMap"></script>
-
+  <div class="row">
+    <div class="container">
+      <div class="col s12 m6">
+        <div class="card horizontal">
+            <div class="card-image">
+              <img src="img/bitBlack.jpg">
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
+              </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
       </div>
+
+      <div class="col s12 m6">
+        <div class="card horizontal">
+            <div class="card-image">
+              <img src="https://lorempixel.com/100/190/nature/6">
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
+              </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m6">
+        <div class="card horizontal">
+            <div class="card-image">
+              <img src="https://lorempixel.com/100/190/nature/6">
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
+              </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m6">
+        <div class="card horizontal">
+            <div class="card-image">
+              <img src="https://lorempixel.com/100/190/nature/6">
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
+              </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m12">
+        <div class="card horizontal">
+            <div class="card-image">
+              <img src="https://lorempixel.com/100/190/nature/6">
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
+              </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
+  </div>
 
   <footer class="page-footer default-primary-color">
     <div class="container">
@@ -111,7 +164,7 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Haniel</a>
+      Made by <a class="orange-text text-lighten-3" href="http://google.com">Haniel</a>
       </div>
     </div>
   </footer>
