Promociones imagenes y cards blancos

--- a/starter-template/promociones.html
+++ b/starter-template/promociones.html
@@ -39,10 +39,10 @@
     </div>
   </nav>
 
-  <div class="row shadow-box">
-    <div class="col s12 m12">
+  <div class="row  light-blue darken-2 shadow-box">
+    <div class="col s12 m12 container">
       <div class="container">
-        <h2 class="header left third-text-color text-shadow">Promociones</h2>                
+        <h3 class="header left text-primary-color text-shadow">Promociones</h3>                
       </div>
     </div>
   </div>
@@ -50,7 +50,7 @@
   <div class="row">
     <div class="container">
       <div class="col s12 m6">
-        <div class="card horizontal">
+        <div class="card horizontal hoverable">
             <div class="card-image">
               <img src="img/bitBlack.jpg">
             </div>
@@ -59,71 +59,71 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
               </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Más información</a>
             </div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m6">
-        <div class="card horizontal">
+        <div class="card horizontal hoverable">
             <div class="card-image">
-              <img src="https://lorempixel.com/100/190/nature/6">
+              <img src="img/blackCap.jpg">
             </div>
             <div class="card-stacked">
               <div class="card-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
               </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Más información</a>
             </div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m6">
-        <div class="card horizontal">
+        <div class="card horizontal hoverable">
             <div class="card-image">
-              <img src="https://lorempixel.com/100/190/nature/6">
+              <img src="img/blackShirt.jpg">
             </div>
             <div class="card-stacked">
               <div class="card-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
               </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Más información</a>
             </div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m6">
-        <div class="card horizontal">
+        <div class="card horizontal hoverable">
             <div class="card-image">
-              <img src="https://lorempixel.com/100/190/nature/6">
+              <img src="img/redCap.jpg">
             </div>
             <div class="card-stacked">
               <div class="card-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
               </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Más información</a>
             </div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m12">
-        <div class="card horizontal">
+        <div class="card horizontal hoverable">
             <div class="card-image">
-              <img src="https://lorempixel.com/100/190/nature/6">
+              <img src="img/whiteShirt.jpg">
             </div>
             <div class="card-stacked">
               <div class="card-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod ante diam, eget efficitur nisi luctus eget. In in feugiat odio, ac vehicula erat.</p>
               </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Más información</a>
             </div>
           </div>
         </div>
