--- a/starter-template/contacto.html
+++ b/starter-template/contacto.html
@@ -7,10 +7,11 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/palette.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="../css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/palette.css">
 </head>
 <body>
   <ul id="dropdown1" class="dropdown-content">
@@ -20,13 +21,15 @@
   <li class="divider"></li>
   <li><a href="galeria.html">Galería</a></li>
 </ul>
-  <nav class="default-primary-color border-bottom" role="navigation">
+  <nav class="default-primary-color" role="navigation">
     <div class="nav-wrapper container">
 
-      <a id="" href="index.html" class="brand-logo"><i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>Serigrafía</a>
+      <a href="index.html" class="brand-logo title-nav"><i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>Serigrafía Isaias</a>
 
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Promociones</a></li>
+        <li class="active"><a href="promociones.html">Promociones</a></li>
+        <li><a href="galeria.html">Galería</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Enlaces<i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
 
