--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -7,10 +7,11 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/palette.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="../css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/palette.css">
 </head>
 <body>
   <ul id="dropdown1" class="dropdown-content">
@@ -23,10 +24,12 @@
   <nav class="default-primary-color" role="navigation">
     <div class="nav-wrapper container">
 
-      <a id="" href="index.html" class="brand-logo"><i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>Serigrafía</a>
+      <a href="index.html" class="brand-logo title-nav"><i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>Serigrafía Isaias</a>
 
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Promociones</a></li>
+        <li class="active"><a href="promociones.html">Promociones</a></li>
+        <li><a href="detalle.html">Detalle</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Enlaces<i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
 
@@ -41,12 +44,12 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center third-text-color">Sublimación camisas</h1>
+      <h1 class="header center third-text-color title-nav">Sublimación camisas</h1>
       <div class="row center">
         <h5 class="header col s12 light">Una empresa adaptada a ti</h5>
       </div>
       <div class="row center">
-        <button class="btn btn-large waves-effect yellow darken-3">Ver promociones</button>
+        <a class="btn btn-large waves-effect yellow darken-3" href="promociones.html">Ver promociones</a>
       </div>
       <br><br>
 
