hover buttons en Index

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -61,15 +61,18 @@
     <div class="section">
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4 center">
+        <div class="col s12 m4 center img-placeholder">          
+          <a href="detalle.html" class="blue-grey btn-large waves-effect btn-product">Ver</a>
           <img src="img/blackShirt.jpg">
         </div>
 
-        <div class="col s12 m4 center">
+        <div class="col s12 m4 center img-placeholder">
+          <a href="detalle.html" class="blue-grey  btn-large waves-effect btn-product">Ver</a>
           <img src="img/whiteShirt.jpg">
         </div>
 
-        <div class="col s12 m4 center">
+        <div class="col s12 m4 center img-placeholder">
+          <a href="detalle.html" class="blue-grey  btn-large waves-effect btn-product">Ver</a>
           <img src="img/blackShirt.jpg">
         </div>
       </div>
@@ -104,11 +107,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s12 m6 center">
+        <div class="col s12 m6 center img-placeholder">
+          <a href="detalle.html" class="blue-grey  btn-large waves-effect btn-product">Ver</a>
           <img src="img/redCap.jpg">
         </div>
 
-        <div class="col s12 m6 center">
+        <div class="col s12 m6 center img-placeholder">
+          <a href="detalle.html" class="blue-grey  btn-large waves-effect btn-product">Ver</a>
           <img src="img/blackCap.jpg">
         </div>
 
