--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://github.com/georgeconter/shirts/tree/master/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link rel="stylesheet" href="../css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/palette.css">
+  <link href="https://github.com/georgeconter/shirts/tree/master/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://github.com/georgeconter/shirts/tree/master/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://github.com/georgeconter/shirts/tree/master/css/css/palette.css">
 </head>
 <body>
   <ul id="dropdown1" class="dropdown-content">
@@ -178,8 +178,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="https://github.com/georgeconter/shirts/tree/master/js/materialize.js"></script>
+  <script src="https://github.com/georgeconter/shirts/tree/master/js/init.js"></script>
 
   </body>
 </html>
